tests/errors/first_stage/.extern/label_exists/label_exists.as
; using a label defined in the file as a .extern argument
myLbl: .data 1, 2
.extern myLbl
